add fetch user endpoint
