# src/lib/assets/swagger.yaml
@@ -157,8 +157,25 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/SelfUser'
-
   /users/{id}:
+    get:
+      summary: Fetches a user's info
+      security:
+        - api_key: []
+        - {}
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PublicUser'
     patch:
       summary: Update a user's workflow limit
       tags:
